# automations

./: .gitignore  CONTEXT.md  README.md  diff.txt  pyproject.toml  requirements.txt
automations_cli/: main.py
automations_cli/commands/: docs_generator.py  file_organizer.py  subtitle_manager.py  video_downloader.py  website_cloner.py  wg_activate.py
automations_cli/commands/helper/: configs.py
codes/: audio_files_organizer.py  csv_file_reader.py  file_archiver.py  file_cleaner.py  file_copier.py  file_mover.py  file_organizer.py  file_sort_downloads.py  file_zip_extractor.py  get_bloatware_list.py  image_viewer.py  numbering_remover.py  organize_gphotos_takeout.py  project_generator.py  read_wayfay_output.py  static_ip.py  sumatra_backup.py  sumatra_theme_changer.py  vault_manager.py  wayfay.py
codes/helper/: funcs.py
scripts/: file_organizer.py  gphotos_takeout_organizer.py  install_chromedriver.py  pg_backup_tool.py  project_generator.py  wayfay.py  website_cloner.py  wg_activate.py
scripts/helper/: __init__.py  configs.py  funcs.py
src/automations_cli/: docs_generator.py  file_downloader.py  file_organizer.py  flutter.py  fullstack.py  gist_manager.py  gist_uploader.py  gphotos_takeout_organizer.py  install_chromedriver.py  main.py  pg_backup_tool.py  project_generator.py  subtitle_manager.py  torrent_downloader.py  video_downloader.py  wayfay.py  website_cloner.py  wg_activate.py
src/automations_cli/helper/: __init__.py  configs.py  funcs.py  templates.py
