[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automations-cli"
version = "1.0.0"
description = "A collection of personal automation scripts, managed as a CLI tool."
authors = [{ name = "Onehand Coding", email = "onehand.coding433@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    # Pinning typer and click to known compatible versions
    "typer==0.9.0",
    "click==8.1.7",

    # The rest of your dependencies
    "beautifulsoup4",
    "cachetools",
    "certifi",
    "cffi",
    "charset-normalizer",
    "cryptography",
    "google-api-python-client",
    "google-auth-oauthlib",
    "httplib2",
    "idna",
    "oauth2client",
    "piexif",
    "pillow",
    "protobuf",
    "pyasn1",
    "pyasn1-modules",
    "pycparser",
    "pyopenssl",
    "pyparsing",
    "pyperclip",
    "python-dotenv",
    "pyyaml",
    "requests",
    "rsa",
    "send2trash",
    "six",
    "tqdm",
    "uritemplate",
    "urllib3",
]

[project.scripts]
automations = "automations_cli.main:app"
