[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automations-cli"
version = "1.0.0"
description = "A collection of personal automation scripts, managed as a CLI tool."
authors = [{ name = "Onehand Coding", email = "onehand.coding433@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "typer==0.9.0",
    "click==8.1.7",
    "pysrt",
    "send2trash",
    "tqdm",
    "ffsubsync",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth",
    "python-dotenv",
    "requests"
]

[project.scripts]
automations = "automations_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/automations_cli"]
